tests/fail/semantics/native_user_data_requires_state/main.kira
struct CounterState {
    var count: Int
}

@Main
function entry() {
    var value = CounterState { count: 0 }
    var token = nativeUserData(value)
    return
}
